--- a/main.html
+++ b/main.html
@@ -4,7 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   </head>
   <body>
-    
+    <div class="titolo">
+      <div>Benvenuto!</div>
+      <img src="immagini/mano-che-saluta.png">
+    </div>
+    <div class="contmemoji">
+      <img src="immagini/memoji.png">
+    </div>
     <script src="main.js">  </script>      
   </body>
 </html>
