--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
       <div>Benvenuto!</div>
       <img src="immagini/mano-che-saluta.png">
     </div>
-    <div class="contmemoji">
-      <img src="immagini/memoji.png">
+    <div class="contscroll">
+      <div class="contmemoji uno active">
+        <img src="immagini/memoji.png">
+      </div>
+      
+      <div class="contmemoji due">
+        <img src="immagini/memoji.png">
+      </div>
     </div>
+    
     <script src="main.js">  </script>      
   </body>
 </html>
