--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   </head>
   <body>
-    <div class="titolo">
+    <div class="titolo" id="titolo">
       <div>Benvenuto!</div>
       <img src="immagini/mano-che-saluta.png">
     </div>
@@ -17,14 +17,14 @@
         <img src="immagini/memoji.png">
       </div>
     </div>
-    <div class="contlinee contlineeuno">
+    <div class="contlinee contlineeuno" id="contprog1">
       <div class="linea notalavoro">
         <div>Nota Lavoro</div>
         <img src="immagini/freccia ios.png">
       </div>
     </div>
     
-    <div class="contlinee contlineedue">
+    <div class="contlinee contlineedue" id="contprog2">
       <div class="linea assenze">
         <div>Assenze</div>
         <img src="immagini/freccia ios.png">
