--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       
       <div class="contmemoji due" id="due">
-        <img src="immagini/memoji.png" class="memoji">
+        <img src="immagini/memojisimo.png" class="memoji memojisimo">
       </div>
     </div>
     <div class="contlinee contlineeuno" id="contprog1">
