--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <div>Nota Lavoro</div>
         <img src="immagini/freccia ios.png">
       </div>
+      <div class="linea OggettiOrdinati">
+        <div>Oggetti Ordinati</div>
+        <img src="immagini/freccia ios.png">
+      </div>
     </div>
     
     <div class="contlinee contlineedue" id="contprog2">
