--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <title>Il Meglio Sito Che C'è</title>
   </head>
   <body>
     <div class="titolo" id="titolo">
