--- a/Progetti/Fede/oggettiOrdinati/index.html
+++ b/Progetti/Fede/oggettiOrdinati/index.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="Oio.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <title>Oggetti Ordinati</title>
   </head>
   <body>
     <div id="casellaCambio">
