--- a/Progetti/Fede/notaLavoro/index.html
+++ b/Progetti/Fede/notaLavoro/index.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="notalavoro.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-
+    <title>Nota Lavoro</title>
    
   </head>
   <body>
