--- a/Progetti/Simo/sitosimo/assenze.html
+++ b/Progetti/Simo/sitosimo/assenze.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="assenze.css">
     
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <title>Assenze</title>
   </head>
   <body>
       <div class="vuoto"></div>
