--- a/Progetti/Simo/sitosimo/calendario.html
+++ b/Progetti/Simo/sitosimo/calendario.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="calendario.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <title>Calendario</title>
   </head>
   <body>
       <div class="titolo">Calendario</div>
