--- a/Progetti/Simo/sitosimo/fede.html
+++ b/Progetti/Simo/sitosimo/fede.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="fede.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <title>Countdown</title>
   </head>
   <body>
       <div class="scritta">
