--- a/Progetti/Simo/sitosimo/home.html
+++ b/Progetti/Simo/sitosimo/home.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="home.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <title>Home</title>
   </head>
   <body>
     <div class="divtitolo">
