--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div>Nota Lavoro</div>
         <img src="immagini/freccia ios.png">
       </div>
-      <div class="linea OggettiOrdinati">
+      <div class="linea Oggetti-Ordinati">
         <div>Oggetti Ordinati</div>
         <img src="immagini/freccia ios.png">
       </div>
