--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <div>Oggetti Ordinati</div>
         <img src="immagini/freccia ios.png">
       </div>
+      <div class="linea Impegni">
+        <div>Impegni</div>
+        <img src="immagini/freccia ios.png">
+      </div>
     </div>
     
     <div class="contlinee contlineedue" id="contprog2">
