--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="lista listas">
           <div class="assenze">Assenze</div>
           <div class="calendario">Calendario</div>
-          <div>Countdown</div>
+          <div class="countdown">Countdown</div>
         </div>
       </div>
       <div class="spaziodx"></div>
