--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         <div class="lista listaf">
           <div class="Impegni">Impegni</div>
+          <div class="Classifica">Classifica</div>
         </div>
       </div>
       <div class="boxch boxch2">
