--- a/NineGame/index.html
+++ b/NineGame/index.html
@@ -11,6 +11,9 @@
       <div id="avviabut">Avvia</div>
       <div id="timerdiv"></div>
     </div>
+    <div id="v">
+      <img id="ar" src="frecciagiu.png">
+    </div>
 
     <script src="index.js" type="module" >  </script>
     <script src="funzioni.js"   >  </script>         
