--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="lista listaf">
           <div class="Impegni">Impegni</div>
           <div class="Classifica">Classifica</div>
+          <div class="NineGame">NineGame</div>
         </div>
       </div>
       <div class="boxch boxch2">
