--- a/Orario/index.html
+++ b/Orario/index.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <title>Orario</title>
   </head>
   <body>
 
