--- a/Classifica/create/index.html
+++ b/Classifica/create/index.html
@@ -5,10 +5,11 @@
   </head>
   <body>
 
-    <div class="titolo">Le mie classifiche</div>
-    <div class="boxlista"></div>
+    <div class="box">
+      <div class="titolo">Nome</div>
+      <input class="nuovotitolo">
+    </div>
     
-    <div class="esci">Esci</div>
     <script src="index.js" type="module" >  </script>     
   </body>
 </html>
