--- a/impegni/index.html
+++ b/impegni/index.html
@@ -11,6 +11,7 @@
       </div>
     </div>
     <div id="box"></div>
+    <div class="esci">Esci</div>
     <script src="index.js" type="module">  </script>
     <script src="funzioni.js">  </script>         
   </body>
