--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
           <div>classifica</div>
           <div>ninegame</div>
           <div>links</div>
+          <div>chords</div>
       </div>
         
       <div class="lista listas">
