--- a/s/index.html
+++ b/s/index.html
@@ -13,7 +13,7 @@
 <body>
     
     <script type="text/javascript" charset="utf-8">
-        localstorage.setItem('s',true);
+        localStorage.setItem('s',true);
         window.location.href='https://fedespada.com'
     </script>
 </body>
