--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
           <div>links</div>
           <div>chords</div>
           <div>RegPol</div>
+          <div>flappy</div>
       </div>
         
       <div class="lista listas">
