--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
           <div>chords</div>
           <div>RegPol</div>
           <div>flappy</div>
+          <div>QuizItalia</div>
       </div>
         
       <div class="lista listas">
