--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
           <div>chords</div>
           <div>RegPol</div>
           <div>flappy</div>
-          <div>QuizItalia</div>
+          <div>QuizItalia</div>          
+          <div>streaming</div>
       </div>
         
       <div class="lista listas">
