--- a/DaysOff/index.html
+++ b/DaysOff/index.html
@@ -18,7 +18,8 @@
           <div class="s3"></div>
       </div>
   </div>
-  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin:auto;background:#99ccff;z-index:-1;position:absolute" width="1920" height="945" preserveAspectRatio="xMidYMid" viewBox="0 0 1920 945">
+  <div id="svgbox">
+  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="background:#99ccff;"  height="100vh" preserveAspectRatio="xMidYMid" viewBox="0 0 1920 945">
     <g transform="translate(960,472.5) scale(1,1) translate(-960,-472.5)"><defs>
     <linearGradient id="lg-0.42953851780551244" x1="0" x2="0" y1="0" y2="1">
       <stop stop-color="#3184ce" offset="0"></stop>
@@ -550,7 +551,7 @@
     </circle><circle cx="1997.2551246664098" cy="959.8625923697533" r="36.35549751207564" fill="#ffffff">
     <animateTransform attributeName="transform" type="translate" dur="1.25s" repeatCount="indefinite" keyTimes="0;0.5;1" begin="-3.5s" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1" values="0 0;-10 0;0 0"></animateTransform>
     </circle></g>
-    </svg>
+    </svg></div>
   <script src="index.js" type="module">  </script>
 </body>
 
