--- a/orario/index.html
+++ b/orario/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    
+  <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>Orario</title>
