--- a/calendario/index.html
+++ b/calendario/index.html
@@ -33,6 +33,10 @@
       <div class="data">
         <input type="date" id="dataimp">
       </div>
+      <div class="note">Note</div>
+      <div class="notec">
+        <input type="text" id="notei">
+      </div>
       <span></span>
       <div class="fine" id="finepiu">Fine</div>
     </div>
