--- a/calendario/index.html
+++ b/calendario/index.html
@@ -13,10 +13,12 @@
   </div>
 
   <div class="titolo">Calendario</div>
-  <div class="contenitore-impegni" id="contimpegni"></div>
+  <div id="cb">
+    <div class="contenitore-impegni" id="contimpegni"></div>
+  </div>
   <div class="pulsanti">
     <div class="piu" id="piu">
-      <svg width="30px" height="200px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" clip-rule="evenodd"
           d="M12 4C12.5523 4 13 4.44772 13 5V11H19C19.5523 11 20 11.4477 20 12C20 12.5523 19.5523 13 19 13H13V19C13 19.5523 12.5523 20 12 20C11.4477 20 11 19.5523 11 19V13H5C4.44772 13 4 12.5523 4 12C4 11.4477 4.44772 11 5 11H11V5C11 4.44772 11.4477 4 12 4Z"
           fill="#ffffff" />
@@ -31,6 +33,7 @@
       <div class="ContCosa I" id="i">I</div>
 
       <div class="ContCosa V" id="v">V</div>
+      <div class="ContCosa K" id="K">C</div>
     </div>
     <div class="tit">Materia</div>
     <div class="contMateria" id="casellamateria">
