--- a/calendario/index.html
+++ b/calendario/index.html
@@ -5,6 +5,7 @@
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 
 <body>
