--- a/orariostefy/edit/index.html
+++ b/orariostefy/edit/index.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
   </head>
   <body>
     <div id="b"></div>
