--- a/orariostefy/index.html
+++ b/orariostefy/index.html
@@ -3,9 +3,11 @@
     
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="manifest" href="manifest.json">
   </head>
   <body>
-    <div id="b"></div>
+    <div id="b" ></div>
     <div id="ore">
     </div>
 
