--- a/a/index.html
+++ b/a/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 
 <head>
+  <link rel="manifest" href="manifest.json">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 
 <body>
-  <script>localStorage.setItem("jGuIopLfFrTe4Tt6H", 1);
+  <script>
+    document.cookie = "jGuIopLfFrTe4Tt6H=; path=/";
     window.location.href = '../'
   </script>
 </body>
