--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
 
-  <div id="bg"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-      style="background:#000000;" width="auto" height="100vh" preserveAspectRatio="xMidYMid" viewBox="0 0 958 943">
+  <div id="bg"><svg id="msvg" 
+    preserveAspectRatio="xMidYMid" viewBox="0 0 958 943">
       <g transform="translate(479,471.5) scale(1,1) translate(-479,-471.5)">
         <g transform="translate(916.5559904947636 279.6523136259559)">
           <animateTransform attributeName="transform" type="translate" repeatCount="indefinite" calcMode="spline"
