--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  
+
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -9,8 +9,7 @@
 
 <body>
 
-  <div id="bg"><svg id="msvg" 
-    preserveAspectRatio="xMidYMid" viewBox="0 0 958 943">
+  <div id="bg" class="center"><svg id="msvg" preserveAspectRatio="xMidYMid" viewBox="0 0 958 943">
       <g transform="translate(479,471.5) scale(1,1) translate(-479,-471.5)">
         <g transform="translate(916.5559904947636 279.6523136259559)">
           <animateTransform attributeName="transform" type="translate" repeatCount="indefinite" calcMode="spline"
@@ -3820,11 +3819,11 @@
 
   <div id="c">
     <div class="v">
-      <div id="lf" o=false></div>
+      <div id="lf" class="t"></div>
     </div>
     <div class="v">
 
-      <div id="ls" o=false></div>
+      <div id="ls"></div>
     </div>
   </div>
 
