--- a/BlockPuzzle/index.html
+++ b/BlockPuzzle/index.html
@@ -6,12 +6,13 @@
     <title>Block Puzzle</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/BlockPuzzle/manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Block Puzzle">
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" href="icon-192.png">
+    <link rel="apple-touch-icon" href="/BlockPuzzle/icon-192x192.png">
+    <meta name="theme-color" content="#000000">
 </head>
 <body>
     <div class="header">
