--- a/BlockPuzzle/index.html
+++ b/BlockPuzzle/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="manifest" href="/BlockPuzzle/manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Block Puzzle">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" href="/BlockPuzzle/icon-192x192.png">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="rgb(54, 77, 135)">
 </head>
 <body>
     <div class="header">
