--- a/redirectSC/index.html
+++ b/redirectSC/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <script>
-      window.location.href="https://streamingcommunity.spa/"
+      window.location.href="https://streamingcommunity.ovh/"
     </script>
   </body>
 </html>
